python-debian (0.1.21) UNRELEASED; urgency=low

  [ Tshepang Lekhonkhobe ]
  * test_changelog.py: Close open files. (Closes: #625672)

  [ John Wright ]
  * Allow ':' as the first character of a value. (Closes: #597249)
  * Avoid dumping unparseable data. (Closes: #597120)
  * Clean up deb822.GpgInfo implementation:
    - Change several @staticmethod decorated methods to @classmethod,
      since they call the class constructor.
    - from_sequence now can accept both sequences of newline-terminated
      strings and the output of str.splitlines().
    - from_file now actually calls the from_sequence method.
      (Closes: #627058)
    - from_sequence now makes a copy of the initial args list before
      extending it. (Closes: #627060)
    - Keyrings are no longer checked for accessibility, since gpgv can
      accept keyring arguments that are under the GnuPG home directory,
      regardless of the current directory. (Closes: #627063)
  * deb822.Deb822.gpg_info takes an optional keyrings argument.

 -- John Wright <jsw@debian.org>  Sat, 02 Jul 2011 23:20:27 -0700

python-debian (0.1.20) unstable; urgency=low

  * Fix FTBFS, caused by referring to apt_pkg in a test with no
    python-apt Build-Depends. (Closes: #623011)
  * changelog: Implement __unicode__ in ChangeBlock and Changelog.
    (Closes: #561805)

 -- John Wright <jsw@debian.org>  Sun, 17 Apr 2011 17:37:44 -0700

python-debian (0.1.19) unstable; urgency=low

  * debian_support.BaseVersion: Disallow ':' in upstream version if
    there is no epoch.  Original patch by Steve Kowalik.
    (Closes: #619997)

 -- John Wright <jsw@debian.org>  Fri, 15 Apr 2011 02:05:45 -0700

python-debian (0.1.18+nmu1) unstable; urgency=low

  * Non-maintainer upload.
  * Migrate to new python-apt API (Closes: #604544)

 -- Julian Andres Klode <jak@debian.org>  Tue, 05 Apr 2011 11:02:08 +0200

python-debian (0.1.18) unstable; urgency=low

  * Support installation together with older versions of python-apt.