@@ -4,8 +4,9 @@ python-debian (0.1.21) UNRELEASED; urgency=low
   * test_changelog.py: Close open files. (Closes: #625672)
 
   [ John Wright ]
-  * Allow ':' as the first character of a value. (Closes: #597249)
-  * Avoid dumping unparseable data. (Closes: #597120)
+  * deb822: Allow ':' as the first character of a value.
+    (Closes: #597249)
+  * deb822: Avoid dumping unparseable data. (Closes: #597120)
   * Clean up deb822.GpgInfo implementation:
     - Change several @staticmethod decorated methods to @classmethod,
       since they call the class constructor.
@@ -19,6 +20,7 @@ python-debian (0.1.21) UNRELEASED; urgency=low
       accept keyring arguments that are under the GnuPG home directory,
       regardless of the current directory. (Closes: #627063)
   * deb822.Deb822.gpg_info takes an optional keyrings argument.
+  * deb822: Don't interpret lines starting with '#'. (Closes: #632306)
 
  -- John Wright <jsw@debian.org>  Sat, 02 Jul 2011 23:20:27 -0700
 
